test/spec_vectors/f32/fail/module_7.wat
(module (func (result f32) (f32.ceil (i64.const 0))))